--- a/package.json
+++ b/package.json
@@ -16,5 +16,32 @@
   "bugs": {
     "url": "https://github.com/zsnydr/react-webpack-boilerplate/issues"
   },
-  "homepage": "https://github.com/zsnydr/react-webpack-boilerplate#readme"
+  "homepage": "https://github.com/zsnydr/react-webpack-boilerplate#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "bootstrap-sass": "^3.3.7",
+    "express": "^4.14.0",
+    "node-sass": "^4.1.1",
+    "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0",
+    "sass-loader": "^4.1.1",
+    "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "eslint": "^3.13.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
+    "nodemon": "^1.11.0",
+    "webpack-dev-middleware": "^1.9.0"
+  }
 }
