--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "node-sass": "^4.1.1",
     "react": "^15.4.2",
@@ -27,6 +28,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
     "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
